Додано нові функції та покращення дизайну

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
         <div class="header_left">
             <h1>Ім'я Прізвище</h1>
             <div class="bio">
-                <p>Тут напиши що-небудь про себе :)</p>
+                
+                <p>Мене звати Володимир. Я навчаюсь в онлайн школі "Logika", ф також в ЖАТФК на спеціальності комп'ютерні науки.
+                    В мене є досвід з такими мовами програмування як: JavaScrip, Phyton та C++.
+                </p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
         </div>
@@ -40,7 +43,7 @@
             <h1>Проєкти</h1>
             <div class="section_row">
                 <div class="section_item github">
-                    <img src="github_logo.png" alt="">
+                    <img src="github_logo.png" alt="https://github.com/Latte2322">
                 </div>
             </div>
         </section>
@@ -48,13 +51,13 @@
             <h1>Контакти</h1>
             <div class="section_row">
                 <div class="section_item">
-                    <img src="Instagram_icon.png.webp" alt="">
+                    <img src="Instagram_icon.png.webp" alt="https://www.instagram.com/">
                 </div>
                 <div class="section_item">
-                    <img src="tg_logo.svg" alt="">
+                    <img src="tg_logo.svg" alt="https://t.me/Vova">
                 </div>
                 <div class="section_item">
-                    <img src="email_logo.png" alt="">
+                    <img src="email_logo.png" alt="stavskijvova72d@gmail.com">
                 </div>
             </div>
         </section>
