--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="header_left">
-            <h1>Ім'я Прізвище</h1>
+            <h1>Володимир Ставський</h1>
             <div class="bio">
                 
                 <p>Мене звати Володимир. Я навчаюсь в онлайн школі "Logika", ф також в ЖАТФК на спеціальності комп'ютерні науки.
