--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                     В мене є досвід з такими мовами програмування як: JavaScrip, Phyton та C++.
                 </p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>Я люблю грати в комютерні ігри, також вивчати математику.</p>
             </div>
         </div>
         <div class="header_right">
